# code-snippets

./: CMakeLists.txt  README.md  check_byteorder.cpp  locking_queue.cpp  move_if_noexcept.cpp  thread_guard.cpp  thread_safe_counter.cpp  thread_wrapper.cpp
cmake/: FindFFmpeg.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
